force-app/main/default/objects/Product2/fields/Build_Type__c.field-meta.xml
<CustomField>
    <fullName>Build_Type__c</fullName>
    <label>Build. Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>