force-app/main/default/objects/Product2/fields/Client_Prices_NSA__c.field-meta.xml
<CustomField>
    <fullName>Client_Prices_NSA__c</fullName>
    <label>Client Prices (NSA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>