force-app/main/default/objects/Product2/fields/Client_Prices_Terrace_Areas__c.field-meta.xml
<CustomField>
    <fullName>Client_Prices_Terrace_Areas__c</fullName>
    <label>Client Prices (Terrace Areas)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>