force-app/main/default/objects/Product2/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>