force-app/main/default/objects/Product2/fields/Number_Of_Building__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Building__c</fullName>
    <label>Number Of Building</label>
    <length>255</length>
    <type>Text</type>
</CustomField>