force-app/main/default/objects/Product2/fields/Price_Sqm_SAR_Services__c.field-meta.xml
<CustomField>
    <fullName>Price_Sqm_SAR_Services__c</fullName>
    <label>Price Sqm SAR /Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>