force-app/main/default/objects/Product2/fields/Services_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Services_Area_Sqm__c</fullName>
    <label>Services Area Sqm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>