force-app/main/default/objects/Product2/fields/Terrace_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Terrace_Area_Sqm__c</fullName>
    <label>Terrace Area Sqm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>