force-app/main/default/objects/Product2/fields/Terraces__c.field-meta.xml
<CustomField>
    <fullName>Terraces__c</fullName>
    <label>Terraces</label>
    <length>255</length>
    <type>Text</type>
</CustomField>