force-app/main/default/objects/Product2/fields/Tower_No__c.field-meta.xml
<CustomField>
    <fullName>Tower_No__c</fullName>
    <label>Tower No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>