force-app/main/default/objects/Product2/fields/Unit_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Unit_Area_Sqm__c</fullName>
    <label>Unit Area  Sqm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>