force-app/main/default/objects/Product2/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <label>View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>