force-app/main/default/objects/Product2/fields/Weighting_Factors_Level_I__c.field-meta.xml
<CustomField>
    <fullName>Weighting_Factors_Level_I__c</fullName>
    <label>Weighting Factors Level I</label>
    <length>255</length>
    <type>Text</type>
</CustomField>