force-app/main/default/objects/Product2/fields/Weighting_Factors_Level_II__c.field-meta.xml
<CustomField>
    <fullName>Weighting_Factors_Level_II__c</fullName>
    <label>Weighting Factors Level II</label>
    <length>255</length>
    <type>Text</type>
</CustomField>