force-app/main/default/objects/Product2/fields/Weighting_Factors_Services__c.field-meta.xml
<CustomField>
    <fullName>Weighting_Factors_Services__c</fullName>
    <label>Weighting Factors Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>