force-app/main/default/objects/Product2/fields/ZONE__c.field-meta.xml
<CustomField>
    <fullName>ZONE__c</fullName>
    <label>ZONE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>