force-app/main/default/objects/Product2/recordTypes/KAYANAT_BUSINESS_PARK.recordType-meta.xml
<RecordType>
    <fullName>KAYANAT_BUSINESS_PARK</fullName>
    <active>true</active>
    <label>KAYANAT BUSINESS PARK</label>
</RecordType>