force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>ZONE__c</columns>
    <columns>Tower_Name__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Tower_No__c</columns>
    <columns>Number_Of_Building__c</columns>
    <columns>Level__c</columns>
    <columns>Build_Type__c</columns>
    <columns>Unit_No__c</columns>
    <columns>View__c</columns>
    <columns>Unit_Area_Sqm__c</columns>
    <columns>Services_Area_Sqm__c</columns>
    <columns>Terrace_Area_Sqm__c</columns>
    <columns>Price_Sqm_SAR_NSA__c</columns>
    <columns>Price_Sqm_SAR_Services__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Buildings</label>
</ListView>